--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header id='header' class='header'>
-    <div class="logo">Webpack 单页面Demo</div>
+    <div class="logo"></div>
   </header>
   <section>
     <nav id="nav" class="nav-tab">
