--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,16 @@
   <section>
     <nav id="nav" class="nav-tab">
       <ul class='tab'>
-        <li><a class='nav-item' href="#/index">index</a></li>
-        <li><a class='nav-item' href="#/news">news</a></li>
+        <li><a class='nav-item' href="#/index">首页</a></li>
+        <li><a class='nav-item' href="#/news">资讯</a></li>
+        <li><a class='nav-item' href="#/subscribe">观察者</a></li>
+        <li><a class='nav-item' href="#/proxy">代理</a></li>
       </ul>
     </nav>
     <div id="container" class='container'>
+      <div id="main" class='main'></div>
     </div>
   </section>
 </body>
+
 </html>
