--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="favicon.ico">
   <title>webpack-demo</title>
 </head>
 <body>
@@ -17,6 +18,7 @@
         <li><a class='nav-item' href="#/news">资讯</a></li>
         <li><a class='nav-item' href="#/subscribe">观察者</a></li>
         <li><a class='nav-item' href="#/proxy">代理</a></li>
+        <li><a class='nav-item' href="#/store">状态管理</a></li>
       </ul>
     </nav>
     <div id="container" class='container'>
