--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
     <nav id="nav" class="nav-tab">
       <ul class='tab'>
         <li><a class='nav-item' href="#/index">首页</a></li>
-        <li><a class='nav-item' href="#/news">资讯</a></li>
         <li><a class='nav-item' href="#/subscribe">观察者</a></li>
         <li><a class='nav-item' href="#/proxy">代理</a></li>
-        <li><a class='nav-item' href="#/store">状态管理</a></li>
+        <li><a class='nav-item' href="#/state">状态管理</a></li>
+        <li><a class='nav-item' href="#/dom">虚拟DOM</a></li>
       </ul>
     </nav>
     <div id="container" class='container'>
