路由懒加载

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
         <li><a class='nav-item' href="#/proxy">代理</a></li>
         <li><a class='nav-item' href="#/state">状态管理</a></li>
         <li><a class='nav-item' href="#/dom">虚拟DOM</a></li>
+        <!-- <li><a class='nav-item' href="#/mvvm">双向数据绑定</a></li> -->
       </ul>
     </nav>
     <div id="container" class='container'>
