修复兄弟路由加载逻辑,修复状态管理重复添加事件问题,添加布局的案例

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,13 @@
   <section>
     <nav id="nav" class="nav-tab">
       <ul class='tab'>
-        <li><a class='nav-item' href="#/index">首页</a></li>
-        <li><a class='nav-item' href="#/subscribe">观察者</a></li>
-        <li><a class='nav-item' href="#/proxy">代理</a></li>
+        <li><a class='nav-item' href="#/index">首 页</a></li>
+        <li><a class='nav-item' href="#/design">设计模式</a></li>
         <li><a class='nav-item' href="#/state">状态管理</a></li>
-        <li><a class='nav-item' href="#/dom">虚拟DOM</a></li>
-        <!-- <li><a class='nav-item' href="#/mvvm">双向数据绑定</a></li> -->
+        <!-- <li><a class='nav-item' href="#/dom">虚拟DOM</a></li> -->
+        <li><a class='nav-item' href="#/layout">布 局</a></li>
+        <li><a class='nav-item' href="#/mvvm">双向绑定</a></li>
+        <!-- <li><a class='nav-item' href="#/algorithm">算 法</a></li> -->
       </ul>
     </nav>
     <div id="container" class='container'>
