--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
         <!-- <li><a class='nav-item' href="#/dom">虚拟DOM</a></li> -->
         <li><a class='nav-item' href="#/layout">布 局</a></li>
         <li><a class='nav-item' href="#/mvvm">双向绑定</a></li>
+        <li><a class='nav-item' href="#/toExcel">导出Excel</a></li>
         <!-- <li><a class='nav-item' href="#/algorithm">算 法</a></li> -->
       </ul>
     </nav>
