--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="./static/favicon.ico">
   <title>webpack-demo</title>
 </head>
 <body>
@@ -21,6 +21,8 @@
         <li><a class='nav-item' href="#/layout">布 局</a></li>
         <li><a class='nav-item' href="#/mvvm">双向绑定</a></li>
         <li><a class='nav-item' href="#/toExcel">导出Excel</a></li>
+        <li><a class='nav-item' href="#/h5live">h5直播</a></li>
+        <li><a class='nav-item' href="#/data">数据结构</a></li>
         <!-- <li><a class='nav-item' href="#/algorithm">算 法</a></li> -->
       </ul>
     </nav>
